--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,9 @@ classifiers =
 	Programming Language :: Python :: 3
 
 [options]
-packages = find_namespace:
+# py27 compat
+# packages = find_namespace:
+packages = find:
 include_package_data = true
 python_requires = >=2.6
 install_requires =
@@ -35,16 +37,16 @@ exclude =
 testing =
 	# upstream
 	pytest >= 4.6
-	pytest-checkdocs >= 2.4
-	pytest-flake8
+	pytest-checkdocs >= 2.4; python_version >= "3.6"
+	pytest-flake8; python_version >= "3"
 	# python_implementation: workaround for jaraco/skeleton#22
 	# python_version: workaround for python/typed_ast#156
-	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10"
-	pytest-cov
+	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10" and python_version >= "3"
+	pytest-cov; python_version >= "3"
 	# python_implementation: workaround for jaraco/skeleton#22
 	# python_version: workaround for python/typed_ast#156
-	pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
-	pytest-enabler >= 1.0.1
+	pytest-mypy; python_implementation != "PyPy" and python_version < "3.10" and python_version > "3"
+	pytest-enabler >= 1.0.1; python_version >= "3.0"
 
 	# local
 
