--- a/setup.cfg
+++ b/setup.cfg
@@ -11,16 +11,12 @@ classifiers =
 	Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
-	Programming Language :: Python :: 2.6
-	Programming Language :: Python :: 2.7
 	Programming Language :: Python :: 3
 
 [options]
-# py27 compat
-# packages = find_namespace:
-packages = find:
+packages = find_namespace:
 include_package_data = true
-python_requires = >=2.6
+python_requires = >=3.8
 install_requires =
 
 [options.packages.find]
